[package]
name = "trust"
version = "0.1.0"
authors = ["Beu-Wolf <daniel.gseara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.9.0"
bitflags = "1.0"

[lib]
name = "trust"
src = "src/lib.rs"

[[bin]]
name = "trust"
src = "src/main.rs"